[gd_scene load_steps=6 format=3 uid="uid://crkvxer1ny5ol"]

[ext_resource type="Script" path="res://Scenes/Car/Car.gd" id="1_4448l"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mev6c"]
friction = 0.45

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kkuw"]
size = Vector2(320, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_7loiy"]
radius = 27.5

[sub_resource type="CircleShape2D" id="CircleShape2D_uhwje"]
radius = 27.5

[node name="Car" type="RigidBody2D"]
collision_layer = 2
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_mev6c")
script = ExtResource("1_4448l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8kkuw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="FrontWheelBody" type="RigidBody2D" parent="."]
position = Vector2(110, 30)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontWheelBody"]
shape = SubResource("CircleShape2D_7loiy")

[node name="FrontWheelSprite" type="Sprite2D" parent="FrontWheelBody"]
unique_name_in_owner = true
scale = Vector2(10, 10)

[node name="FrontWheelPin" type="PinJoint2D" parent="FrontWheelBody"]
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="RearWheelBody" type="RigidBody2D" parent="."]
position = Vector2(-110, 30)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RearWheelBody"]
shape = SubResource("CircleShape2D_uhwje")

[node name="RearWheelSprite" type="Sprite2D" parent="RearWheelBody"]
unique_name_in_owner = true
scale = Vector2(10, 10)

[node name="RearWheelPin" type="PinJoint2D" parent="RearWheelBody"]
node_a = NodePath("../..")
node_b = NodePath("..")
